--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^4.33.0",
+    "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "typescript": "^4.4.3",
-    "eslint": "^7.32.0",
-    "vite": "^3.2.11",
+    "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-react": "^2.2.0",
-    "@types/react-dom": "^18.0.9"
+    "eslint": "^7.32.0",
+    "typescript": "^5.7.2",
+    "vite": "^3.2.11"
   }
 }
