--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,7 +8,8 @@
     "module": "CommonJS",
     "skipLibCheck": true,
     "moduleResolution": "node",
-    "allowImportingTsExtensions": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": false,
@@ -16,7 +17,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
     "typeRoots": ["./node_modules/@types", "./declarations.d.ts"]
   },
   "include": ["src", "./declarations.d.ts"]
