--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@jsonforms/material-renderers": "^3.4.1",
     "@jsonforms/react": "^3.4.1",
     "antd": "^5.22.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
