--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@jsonforms/core": "^3.4.1",
     "@jsonforms/material-renderers": "^3.4.1",
     "@jsonforms/react": "^3.4.1",
-    "antd": "^5.22.5",
     "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5"
+    "@types/react-dom": "^18.3.5",
+    "antd": "^5.22.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
