--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@jsonforms/react": "^3.4.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "antd": "^5.22.5"
+    "antd": "^5.22.5",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
