--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
     "strictNullChecks": true,
-    "types": ["vite/client"]
+    "types": ["vite/client", "@vitejs/plugin-react"]
   },
   "include": ["src/**/*", "declarations.d.ts"],
   "exclude": ["node_modules", "dist"]
