--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "antd": "^5.22.5",
-    "react-dom": "^18.3.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
