--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@jsonforms/core": "^3.4.1",
     "@jsonforms/material-renderers": "^3.4.1",
     "@jsonforms/react": "^3.4.1",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
+    "@mui/x-date-pickers": "^7.23.3",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "antd": "^5.22.5",
